--- a/application/views/scripts/admin/sitemap/index.phtml
+++ b/application/views/scripts/admin/sitemap/index.phtml
@@ -99,7 +99,7 @@
                                         <td class="text-center">
                                             <div class="btn-group btn-group-sm" role="group" aria-label="...">
                                                 <a 
-                                                    href="#"
+                                                    href="<?php echo $this->sitemapPageUrl($sitemapPage['id']); ?>"
                                                     target="_blank"
                                                     type="button" class="btn btn-default" title="preview"><i class="glyphicon glyphicon-eye-open"></i></a>
                                                 <a 
@@ -133,7 +133,7 @@
                                         <td class="text-center">
                                             <div class="btn-group btn-group-sm" role="group" aria-label="...">
                                                 <a 
-                                                    href="#"
+                                                    href="<?php echo $this->sitemapPageUrl($sitemapPage['id']); ?>"
                                                     target="_blank"
                                                     type="button" class="btn btn-default" title="preview"><i class="glyphicon glyphicon-eye-open"></i></a>
                                                 <a 
@@ -222,7 +222,7 @@
         </div><!-- /.modal-dialog -->
     </form><!-- /.modal -->
 
-    <form method="post" action="<?php echo $this->url(array('controller' => 'admin_sitemap', 'action' => 'updateorder'), 'default', true); ?>" style="display: none;" id="save-order-form">
+    <form method="post" action="<?php echo $this->url(array('controller' => 'admin_sitemap', 'action' => 'updateorder', 'parent_id' => $this->currentSitemapPageId), 'default', true); ?>" style="display: none;" id="save-order-form">
         <input type="hidden" name="task" value="saveOrder">
         <input type="hidden" name="sorted_ids" value="">
     </form>
