--- a/application/views/scripts/contact/index.phtml
+++ b/application/views/scripts/contact/index.phtml
@@ -36,7 +36,7 @@ $this->headTitle('Contact');
                     <p><abbr title="Phone">P</abbr>: 011/3210-112</p>
                     <p><abbr title="Fax">F</abbr>: 011/3210-112</p>
                     <p><abbr title="Email">E</abbr>: office@cubes.rs</p>
-                    <p><abbr title="Address">A</abbr>: Bulevar Milutina MilankoviÄ‡a 181, 11000 Beograd</p>
+                    <p><abbr title="Address">A</abbr>: Bulevar Milutina Milankovića 181, 11000 Beograd</p>
                     <div id="map" style="width:100%; height: 300px"></div>
 
                     <script>
