--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -68,7 +68,7 @@
                                         <a href="<?php echo $this->baseUrl('/services'); ?>">Services</a>
                                     </li>
                                     <li>
-                                        <a href="<?php echo $this->baseUrl('/aboutus'); ?>">About Us</a>
+                                        <a href="<?php echo $this->url(array(), 'about-us-route', true); ?>">About Us</a>
                                     </li>
                                     <li>
                                         <a href="<?php //echo $this->baseUrl('/contact'); 
