--- a/application/views/scripts/admin/sitemap/edit.phtml
+++ b/application/views/scripts/admin/sitemap/edit.phtml
@@ -22,7 +22,7 @@
                 <div class="panel-heading text-right">
                     <div class="btn-group" role="group" aria-label="...">
                         <a 
-                            href="<?php echo $this->url(array('controller' => 'admin_sitemap', 'action' => 'index', 'parent_id' => $this->sitemapPage['parent_id']), 'default', true); ?>"
+                            href="<?php echo $this->url(array('controller' => 'admin_sitemap', 'action' => 'index', 'parent_id' => $this->parentId), 'default', true); ?>"
                             class="btn btn-default"
                             ><i class="glyphicon glyphicon-arrow-left"></i> Back to pages of parent</a>
                     </div>
