--- a/application/views/scripts/paragvaj/postcodefinder.phtml
+++ b/application/views/scripts/paragvaj/postcodefinder.phtml
@@ -19,7 +19,7 @@
 
                         <h1>Postcode Finder</h1>
 
-                        <p class="lead">Enter your address to find out the post code</p>
+                        <p class="lead">Enter address to find out whose the reader</p>
 
                         <p>Bulevar Milutina Milankovića 181, 11000 Beograd</p>
                         <form>
@@ -55,8 +55,8 @@
 
 <script>
     var latitude = 0;
-                var longitude = 0;
-                
+    var longitude = 0;
+    var place_id;  
     
 
     var map;
@@ -113,6 +113,10 @@
 //                            result = 1;
 //                        }
             });
+            
+//             $(xml).find("place_id").each(function() {
+//                 place_id = 
+//             });
 
 //                    $(xml).find("address_component").each(function() {
 //                        if ($(this).find('long_name')) {
