--- a/application/views/scripts/admin/sitemap/index.phtml
+++ b/application/views/scripts/admin/sitemap/index.phtml
@@ -1,7 +1,8 @@
 <?php
 
     $this->headTitle('Site Map Pages');
-
+    
+    $sitemapPageTypes = Zend_Registry::get('sitemapPageTypes');
 ?>
 
 
@@ -58,8 +59,10 @@
                                                 'controller' => 'admin_sitemap',
                                                 'action' => 'index',
                                                 'parent_id' => $sitemapPage['id']
-                                            ), 'default', true); ?>">
+                                            ), 'default', true); ?>"
+                                        >
                                             <?php echo $this->escape($sitemapPage['short_title']) ?>
+                                        
                                         </a>
                                     </li>
                         <?php } ?>
@@ -69,6 +72,7 @@
                             <tr>
                                 <th></th>
                                 <th class="text-center">Status</th>
+                                <th>Sitemap Page ID</th>
                                 <th>Short Title</th>
                                 <th>Type</th>
                                 <th>Url Slug</th>
@@ -84,14 +88,20 @@
                                     <tr data-sitemap-page-id="<?php echo $this->escape($sitemapPage['id']); ?>" class="danger">
                                         <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list"  style="display: none; cursor: pointer;"></i></td>
                                         <td class="text-center"><span class="badge alert-danger" title="disabled"><i class="glyphicon glyphicon-remove"></i></span></td>
+                                        <td><?php echo $this->escape($sitemapPage['id']); ?></td>
                                         <td>
-                                            <a href="<?php echo $this->url(array(
-                                                'controller' => 'admin_sitemap',
-                                                'action' => 'index',
-                                                'parent_id' => $sitemapPage['id']
-                                            ), 'default', true); ?>">
+                                            <?php if (!empty($sitemapPageTypes[$sitemapPage['type']]['subtypes'])) { ?>
+                                                <a href="<?php echo $this->url(array(
+                                                        'controller' => 'admin_sitemap',
+                                                        'action' => 'index',
+                                                        'parent_id' => $sitemapPage['id']
+                                                    ), 'default', true); ?>">
+                                                    <?php echo $this->escape($sitemapPage['short_title']); ?>
+                                                </a>
+                                            <?php } else { ?> 
                                                 <?php echo $this->escape($sitemapPage['short_title']); ?>
-                                            </a>
+                                            <?php } ?>
+                                            
                                         </td>
                                         <td><?php echo $this->escape($sitemapPage['type']); ?></td>
                                         <td><?php echo $this->escape($sitemapPage['url_slug']); ?></td>
@@ -118,14 +128,19 @@
                                     <tr data-sitemap-page-id="<?php echo $this->escape($sitemapPage['id']); ?>">
                                         <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer;"></i></td>
                                         <td class="text-center"><span class="badge alert-success" title="enabled"><i class="glyphicon glyphicon-ok"></i></span></td>
+                                        <td><?php echo $this->escape($sitemapPage['id']); ?></td>
                                         <td>
-                                            <a href="<?php echo $this->url(array(
-                                                'controller' => 'admin_sitemap',
-                                                'action' => 'index',
-                                                'parent_id' => $sitemapPage['id']
-                                            ), 'default', true); ?>">
+                                            <?php if (!empty($sitemapPageTypes[$sitemapPage['type']]['subtypes'])) { ?>
+                                                <a href="<?php echo $this->url(array(
+                                                        'controller' => 'admin_sitemap',
+                                                        'action' => 'index',
+                                                        'parent_id' => $sitemapPage['id']
+                                                    ), 'default', true); ?>">
+                                                    <?php echo $this->escape($sitemapPage['short_title']); ?>
+                                                </a>
+                                            <?php } else { ?> 
                                                 <?php echo $this->escape($sitemapPage['short_title']); ?>
-                                            </a>
+                                            <?php } ?>
                                         </td>
                                         <td><?php echo $this->escape($sitemapPage['type']); ?></td>
                                         <td><?php echo $this->escape($sitemapPage['url_slug']); ?></td>
