--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -19,7 +19,7 @@
         <!-- Your custom override -->
         <link href="<?php echo $this->baseUrl('/css/custom-style.css'); ?>" rel="stylesheet">
         <!-- @option: Colour skins, choose from: 1. colour-blue.css 2. colour-red.css 3. colour-grey.css 4. colour-purple 5. colour-green.css Uncomment line below to enable -->
-        <link href="<?php echo $this->baseUrl('/css/colour-blue.css'); ?>" rel="stylesheet" id="colour-scheme">
+        <link href="<?php echo $this->baseUrl('/css/colour-green.css'); ?>" rel="stylesheet" id="colour-scheme">
 
         <?php echo $this->headLink(); ?>
 
