--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -39,7 +39,12 @@
         <link href='https://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
 
     </head>
-
+    <style>
+        ul.nav li.dropdown:hover > ul.dropdown-menu {
+            display: block !important;    
+        }
+        
+    </style>    
     <!-- ======== @Region: body ======== -->
     <body class="has-navbar-fixed-top has-highlighted">
 
