--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -33,7 +33,7 @@
                                                     break;
                                                 case 'ExternalLink':
                                                     ?> 
-                                                        <a href="<?php echo $this->escape($indexSlide['external_link_url']); ?>" class="btn btn-lg btn-primary"><?php echo $this->escape($indexSlide['link_label']); ?></a>
+                                                        <a href="<?php echo $this->escape($indexSlide['external_link_url']); ?>" class="btn btn-lg btn-primary" target="_blank"><?php echo $this->escape($indexSlide['link_label']); ?></a>
                                                     <?php
                                                     break;
                                                 case 'InternalLink':
