--- a/application/views/scripts/contact/index.phtml
+++ b/application/views/scripts/contact/index.phtml
@@ -3,82 +3,148 @@
     
     $this->headTitle($sitemapPage['title']);
     $this->headMeta()->appendName('description', $sitemapPage['description']);
+	$form = $this->form;
+    $form->setElementDecorators(array('ViewHelper'));
+	$systemMessages = $this->systemMessages;
 ?>
-<div id="highlighted">
-    <div class="container">
-        <div class="header">
-            <h2 class="page-title">
-                <span>Contact</span> 
-                <small>No project too big or small, get in touch!</small>
-            </h2>
-        </div>
-    </div>
-</div>
-<div id="content">
-    <div class="container">
-        <div class="block">
-            <?php echo $sitemapPage['body']; ?>
-            <div class="row">
-                <div class="col-sm-6">
-                    <form action="#" id="contact-form">
-                        <div class="form-group">
-                            <input type="text" placeholder="Name" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="email" placeholder="Email" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <textarea placeholder="Message" class="form-control" rows="15"></textarea>
-                        </div>
-                        <input type="button" value="Send Message" class="btn btn-primary">
-                    </form>
-                </div>
-                <div class="col-sm-6">
-                    <h3 class="block-title sub-title">
-                        <span>Other Ways To Get In Touch</span>
-                    </h3>
-                    <p><abbr title="Phone">P</abbr>: 011/3210-112</p>
-                    <p><abbr title="Fax">F</abbr>: 011/3210-112</p>
-                    <p><abbr title="Email">E</abbr>: office@cubes.rs</p>
-                    <p><abbr title="Address">A</abbr>: Bulevar Milutina Milankovića 181, 11000 Beograd</p>
-                    <div id="map" style="width:100%; height: 300px"></div>
 
-                    <script>
-                        var map;
-                        
-                        function initMap() {
-                            var myLatLng = {lat: 44.831213, lng: 20.410245};
+	<div id="highlighted">
+		<div class="container">
+			<div class="header">
+				<h2 class="page-title">
+					<span>Contact</span> 
+					<small>No project too big or small, get in touch!</small>
+				</h2>
+			</div>
+		</div>
+	</div>
+	<div id="content">
+		<div class="container">
+			<div class="block">
+				<?php echo $sitemapPage['body']; ?>
+				<div class="row">
+					<div class="col-sm-6">
+						<?php
+							if ($systemMessages == "init") {
+								?>
+									<form method="POST" action="" id="contact-form">
+										<input type="hidden" name="task" value="contact">
+										<div class="form-group">
+											<?php
+												echo $form->getElement('name')->setAttribs(array(
+													'class' => 'form-control input-md',
+													'placeholder' => 'Enter member\'s first name',
+													'id' => 'name',
+													'required' => 'required'
+												));
+											?>
+											<?php if ($form->getElement('name')->hasErrors()) { ?>
+												<div class="has-error">
+													<?php foreach ($form->getElement('name')->getMessages() as $message) { ?>
+														<p class="help-block"><?php echo $this->escape($message); ?></p>
+													<?php } ?>
+												</div>
+											<?php } ?>
+										</div>
+										<div class="form-group">
+											<?php
+												echo $form->getElement('email')->setAttribs(array(
+													'class' => 'form-control input-md',
+													'placeholder' => 'Enter email',
+													'id' => 'email',
+													'required' => 'required'
+												));
+											?>
+											<?php if ($form->getElement('email')->hasErrors()) { ?>
+												<div class="has-error">
+													<?php foreach ($form->getElement('email')->getMessages() as $message) { ?>
+														<p class="help-block"><?php echo $this->escape($message); ?></p>
+													<?php } ?>
+												</div>
+											<?php } ?>
 
-                            map = new google.maps.Map(document.getElementById('map'), {
-                                center: myLatLng,
-                                zoom: 15
-                            });
-                            
-                            marker = new google.maps.Marker({
-                                position: myLatLng,
-                                map: map,
-                                animation: google.maps.Animation.DROP,
-                                title: 'Cubes School'
-                            });
-                            
-                            marker.addListener('click', toggleBounce);
-                        }
-                        
-                        function toggleBounce() {
-                            if (marker.getAnimation() !== null) {
-                                marker.setAnimation(null);
-                            }
-                            else {
-                                marker.setAnimation(google.maps.Animation.BOUNCE);
-                            }
-                        }
-                    </script>
+										</div>
+										<div class="form-group">
+											<?php
+												echo $form->getElement('message')->setAttribs(array(
+													'class' => 'form-control input-md',
+													'placeholder' => 'Enter message',
+													'id' => 'message',
+													'required' => 'required',
+													'rows' => 10
+												));
+											?>
+											<?php if ($form->getElement('message')->hasErrors()) { ?>
+												<div class="has-error">
+													<?php foreach ($form->getElement('message')->getMessages() as $message) { ?>
+														<p class="help-block"><?php echo $this->escape($message); ?></p>
+													<?php } ?>
+												</div>
+											<?php } ?>
 
-                    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCl63DjLjiuUgfMShPAK0Jy5peunCa9NZ4&callback=initMap"
-                            async defer>
-                    </script>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+										</div>
+										<input type="submit" value="Send Message" class="btn btn-primary">
+									</form>
+								<?php
+							}
+							else {
+								if ($systemMessages == "Success") {
+									echo "Uspesno poslata poruka";
+								}
+								else {
+									echo "Doslo je do greske prilikom slanja poruke. Pokusajte kasnije.";
+								}
+							}
+						?>
+						
+						
+					</div>
+					<div class="col-sm-6">
+						<h3 class="block-title sub-title">
+							<span>Other Ways To Get In Touch</span>
+						</h3>
+						<p><abbr title="Phone">P</abbr>: 011/3210-112</p>
+						<p><abbr title="Fax">F</abbr>: 011/3210-112</p>
+						<p><abbr title="Email">E</abbr>: office@cubes.rs</p>
+						<p><abbr title="Address">A</abbr>: Bulevar Milutina Milankovića 181, 11000 Beograd</p>
+						<div id="map" style="width:100%; height: 300px"></div>
+
+						<script>
+							var map;
+
+							function initMap() {
+								var myLatLng = {lat: 44.831213, lng: 20.410245};
+
+								map = new google.maps.Map(document.getElementById('map'), {
+									center: myLatLng,
+									zoom: 15
+								});
+
+								marker = new google.maps.Marker({
+									position: myLatLng,
+									map: map,
+									animation: google.maps.Animation.DROP,
+									title: 'Cubes School'
+								});
+
+								marker.addListener('click', toggleBounce);
+							}
+
+							function toggleBounce() {
+								if (marker.getAnimation() !== null) {
+									marker.setAnimation(null);
+								}
+								else {
+									marker.setAnimation(google.maps.Animation.BOUNCE);
+								}
+							}
+						</script>
+
+						<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCl63DjLjiuUgfMShPAK0Jy5peunCa9NZ4&callback=initMap"
+								async defer>
+						</script>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
