--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -153,6 +153,11 @@
         <?php echo $this->inlineScript(); ?>
         
     </body>
+	
+	<?php
+		$this->addScriptPath(APPLICATION_PATH . '/views/scripts');
+		echo $this->render('admin/util/profiler.phtml');
+	?>
 
 </html>
 
