--- a/application/views/scripts/admin/services/index.phtml
+++ b/application/views/scripts/admin/services/index.phtml
@@ -1,10 +1,13 @@
 <?php
     $this->headTitle('Services');
+	
+	echo $this->translate('TEST');
+	echo $this->translate('LABELA_2');
 ?>
 
 
 <div class="page-header">
-    <h1>Services</h1>
+    <h1><?php echo $this->translate("ALL_SERVICES"); ?></h1>
 </div>
 
 <div class="row">
