--- a/application/views/scripts/admin/sitemap/add.phtml
+++ b/application/views/scripts/admin/sitemap/add.phtml
@@ -53,6 +53,10 @@
                     
                     <form class="form-horizontal" method="post" action="">
                         <input type="hidden" name="task" value="save">
+						<?php echo $form->getElement('csrf_token'); ?>
+						
+						
+						
                         
                         <fieldset>
 
